##Text encoding: utf-8

2008-10-24  Jordan Mantha  <laserjock@ubuntu.com>
        * docs/help/table/C/gchemtable.xml: miscellaneous typo and style fixes.
	
2008-10-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/fragment.cc: check if Fragment::m_Atom is not NULL before
	using it.

2008-10-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.9.99).

2008-10-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/table/gchemtable-curve.cc: sets the application as owner for
	the dialog (fixes a memory leak), and add help support to the graph guru.
	* programs/table/gchemtable-data.cc: fix minimum and maximum for a series
	when the first element is not a number.
	* docs/help/table/C/gchemtable.xml: partially update documentation.
	* docs/help/table/C/figures/*.png: new updated screenshots.

2008-10-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/help/table/C/gchemtable.xml: partially update documentation.
	* docs/help/table/C/figures/*.png: new or updated screenshots.
	
2008-10-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.9.94).

2008-10-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/help/calc/C/gchemcalc.xml: added more documentation.
	* docs/help/calc/C/figures/uv-vis-tools.png: new screenshot.
	* docs/help/spectra/C/gspectrum.xml: wrote documentation for 0.10.

2008-10-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gogcpapp.cc: fix embedded object height.
	* libs/gcu/spectrumdoc.cc: fix the origin for varian nmr dx files.
	* libs/gcu/spectrumdoc.h: ditto.
	* docs/help/spectra/C/figures/*: new screenshots.

2008-10-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/fragment-atom.cc: ensure symbol geometry is always
	evaluated.
	* libs/gcp/molecule.cc: fix contextual menu issues.
	* libs/gcp/view.cc: enable selection of an atom even without a
	visible item.
	* libs/gcu/atom.cc: initalize Z to -1. to avoid confusion with